Corrected a minor contrast issue in CSS.

--- a/archived_sites/wd4e/css/style.css
+++ b/archived_sites/wd4e/css/style.css
@@ -44,7 +44,7 @@ footer {
 }
 
 li {
-    background-color: green;
+    background-color: greenyellow;
 }
 
 ul {
